NES: Implement optional flash delay emulation

--- a/UI/Views/NesConfigView.axaml
+++ b/UI/Views/NesConfigView.axaml
@@ -332,6 +332,7 @@
 						<c:CheckBoxWarning IsChecked="{Binding Config.EnableDmcSampleDuplicationGlitch}" Text="{l:Translate chkEnableDmcSampleDuplicationGlitch}" />
 						<c:CheckBoxWarning IsChecked="{Binding Config.DisableGameGenieBusConflicts}" Text="{l:Translate chkDisableGameGenieBusConflicts}" />
 						<c:CheckBoxWarning IsChecked="{Binding Config.DisableFlashSaves}" Text="{l:Translate chkDisableFlashSaves}" />
+						<c:CheckBoxWarning IsChecked="{Binding Config.EnableFlashDelays}" Text="{l:Translate chkEnableFlashDelays}" />
 
 						<c:CheckBoxWarning IsChecked="{Binding Config.AllowInvalidInput}" Text="{l:Translate chkAllowInvalidInput}" />
 					</c:OptionSection>
